<resources>
    <string name="app_name">Contacts</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_person">PersonActivity</string>
    <string name="title_activity_contact_add">Add Contact</string>

    <string name="add_first_name">First Name</string>
    <string name="add_last_name">Last Name</string>
    <string name="add_city">City</string>
    <string name="add_state">State</string>
    <string name="add_mail">Mail</string>
    <string name="add_phone">Phone</string>
    <string name="add_cell">Cell Phone</string>
    <string name="add_contact">Add Contact</string>

    <string name="deleted">Deleted</string>
    <string name="undo">UNDO</string>

</resources>
